[feature] added i18n support

--- a/res/org/columba/mail/i18n/dialog/general.properties
+++ b/res/org/columba/mail/i18n/dialog/general.properties
@@ -30,3 +30,9 @@ aspell_path=Path to aspell executable:
 changes_affect_new_composer=These options affect only new composer windows.
 
 ask_on_empty_subject=Ask when sending message with empty subject
+
+main_font=Main font:
+
+choose=Choose...
+
+text_font=Text font:
