[intern] SearchFrame enhancements

--- a/res/org/columba/mail/i18n/dialog/filter.properties
+++ b/res/org/columba/mail/i18n/dialog/filter.properties
@@ -41,3 +41,5 @@ choose_folder = Select Folder:
 choose_folder_mnemonic = f
 include_subfolders = Include Subfolders
 include_subfolders_mnemonic = i
+
+search=Search
