*** empty log message ***

--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -115,7 +115,7 @@
 151 = Must explicitly convert the char[] to a String
 152 = String constant is exceeding the limit of 65535 bytes of UTF8 encoding
 153 = case expressions must be constant expressions
-154 = {0} is out of range 
+154 = The literal {1} of type {0} is out of range 
 156 = Cannot cast from {0} to {1}
 157 = The type {0} cannot be instantiated
 158 = Cannot define dimension expressions when an array initializer is provided
