* src/i18n/ScarabBundle_en_US.properties   YouHaveBeenLoggedOut: A new resource indicating that the current   user has been logged out.
* src/java/org/tigris/scarab/actions/Logout.java
  Fixed up JavaDoc in header and methods.

  doLogout(): Localized the logout success message using the new
  YouHaveBeenLoggedOut text resource.

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1020,6 +1020,9 @@ InvalidUsernameOrPassword=Invalid username or password.
 UserIsNotConfirmed=User is not confirmed!
 YourPasswordHasExpired=Your password has expired.
 
+##Logout
+YouHaveBeenLoggedOut=You have been logged out
+
 ##RequireLoginFirstAction and ScarabTemplateAction
 MoreInformationWasRequired=More information was required to submit your request. Please scroll down to see error messages.
 YouDoNotHavePermissionToAction=You do not have permission to perform this action.
