* AssignIssue.java: commitAssigneeChanges(), doDone() and doCancel() replaced by doSave(). check for single issue to which to assign issues. if it does not exist, use issue list for multiple assign.  No longer need to override the doDone and doCancel methods. * ModifyIssue.java: doEditassignees(): set issueId parameter for single issue assign. * screens/AssignIssue.java: getTitle(): if single issue assign, title should be "with this issue" single * AssignIssue.vm: check for issueId parameter for single issue assign. * ViewIssueBody.vm: pass correct cancelPage parameter. * ScarabBundle_en_US.properties: add NoModulesMatch resource Issue number:  17627

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -447,6 +447,7 @@ MoveIssueTitle2={0, choice, 0#Move|1#Copy} issue. Step 2: map attributes.
 CouldNotFindIssue=Sorry, could not find the requested issue.
 NoModulesMatch=No modules match your criteria. Displaying full module list.
 NoDestinationModuleAvailable=Sorry, there are no modules available as destination modules for this issue.
+NoModulesMatch=No modules match your criteria. Displaying full modules list.
 IssueToBeCopied=Issue to be copied/moved
 ChooseCopyMoveDestination=Choose a single destination
 DateCommitted=Date committed
