[intern] added account preferences dialog title

--- a/res/org/columba/mail/i18n/dialog/account.properties
+++ b/res/org/columba/mail/i18n/dialog/account.properties
@@ -153,3 +153,5 @@ receiveoptions=Receive Options
 configure=Configure...
 
 enable_pop3_preprocessing=Enable Pre-Processing Filter
+
+preferences_for=Preferences for
