[feature] completed filtertoolbar i18n

--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -219,8 +219,8 @@ filtertoolbar_flagged = Show flagged messages
 filtertoolbar_expunged = Show expunged messages
 filtertoolbar_attachment = Show messages with attachment
 filtertoolbar_header = Specify header
-filtertoolbar_clear = Reset all filters
-filtertoolbar_advanced = Open search dialog
+filtertoolbar_clear_tooltip=Reset all filters
+filtertoolbar_advanced_tooltip=Open search dialog
 
 
 ######################## attachment viewer
@@ -236,3 +236,9 @@ attachmentview_mimeheader_tooltip=View the Mime-Header of this Attachment
 menu_edit_extern_edit = Use External Editor
 
 menu_security=Security
+
+filtertoolbar_label=Subject or Sender contains:
+
+filtertoolbar_clear=Clear
+
+filtertoolbar_advanced=Advanced...
