--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -445,7 +445,7 @@ NoUserMatch=No users match your criteria. Displaying full user list.
 MoveIssueTitle1={0, choice, 0#Move|1#Copy} issue. Step 1: choose destination.
 MoveIssueTitle2={0, choice, 0#Move|1#Copy} issue. Step 2: map attributes.
 CouldNotFindIssue=Sorry, could not find the requested issue.
-NoModulesMatch=No modules match your criteria. Displaying full module list.
+NoModulesMatch=No modules match your criteria. Displaying full list of modules.
 NoDestinationModuleAvailable=Sorry, there are no modules available as destination modules for this issue.
 NoModulesMatch=No modules match your criteria. Displaying full modules list.
 IssueToBeCopied=Issue to be copied/moved
