* src/i18n/ScarabBundle_en_US.properties   Fixes from Sean Jackson <Sean.Jackson@maynegroup.com>:
  ManagingIssueInfoP1 needs a "t" in second instance of attributes
  AssociatingUsersP2S3 needs an extra "d" in address
  AssociatingUsersP6 needs a space between "criteria.If"
  UQSP3 needs a space between "querya"
  UITP7 has an extra "the"

Issue: PCN # 17757

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1544,20 +1544,20 @@ ModifyP2=review, add or edit information about the issue
 ModifyP3=associate users 
 ModifyP4=move issues
 ManagingIssueInfo=Managing issue information
-ManagingIssueInfoP1=Almost all attributes of an issue are editable from the view issue screen. You can alter most attribues, if you have the proper permission level, view user associations, add url links, create dependencies, add attachments, and view the issue history.
+ManagingIssueInfoP1=Almost all attributes of an issue are editable from the view issue screen. You can alter most attributes, if you have the proper permission level, view user associations, add url links, create dependencies, add attachments, and view the issue history.
 DependenciesP1=You can alter or add dependencies as necessary. As when creating an issue, you must define the dependency type. Dependencies can be blocking, non-blocking or duplicating. For more information on dependencies see
 AssociatingUsersP1=The administrator may have defined several types of user attributes that allow users to easily track the issues they are responsible for or in which they have an interest. You can also use user attributes to search for specfic issues.
 AssociatingUsersP2=All user association tasks are performed on the 
 AssociatingUsersP2S1=screen. To access this screen either use the 
 AssociatingUsersP2S2=button on the view issue page or search for a group of issues and use the 
-AssociatingUsersP2S3=button. On the Assign screen you will see a list of users currently associated with the issue, their email adress and the type of association and a User section which allows you to add users to the issue. You can filter the list of users using the filter form. You can search for users by full name or email address.
+AssociatingUsersP2S3=button. On the Assign screen you will see a list of users currently associated with the issue, their email address and the type of association and a User section which allows you to add users to the issue. You can filter the list of users using the filter form. You can search for users by full name or email address.
 AssociatingUsersP3Head=associating a user:
 AssociatingUsersP3=Once you have narrowed the list of users to select from you can select an association type for the drop down box next to the users name. Use the check box to add multiple users at the same time. Once you have selected your users and set their association type use the 
 AssociatingUsersP4Head=removing an associated user:
 AssociatingUsersP4=select the user or users you would like to remove from the issue and click the 
 AssociatingUsersP5Head=altering the association type:
 AssociatingUsersP5=If you need to change the type of association use the association drop down box next to the name of the user. Each association available for that user will be listed in that box. Select the desired association and click the 
-AssociatingUsersP6=User attributes can also be used in a search criteria.If you do not see a specific user on the user list contact your administrator and make sure that they have been added to the user attribute.
+AssociatingUsersP6=User attributes can also be used in a search criteria.  If you do not see a specific user on the user list contact your administrator and make sure that they have been added to the user attribute.
 MovingIssuesP1=You may need to track a similar issue in multiple areas. Rather than entering the same issue twice, in different areas, you can copy or move an issue 
 ToAnotherModule=to another module or another issue type within the same module.
 MovingIssuesP1S2=To use the Copy/move functionality, you must have permission to create 
@@ -1629,7 +1629,7 @@ SaveThisQuery=Save this query
 UQSP2S3=button. Stored queries are accessible through the 
 UQSP2S4=link on the left navigation bar or in the drop down box on the query bar. The saved query drop box only appears if you have stored queries.
 The=The
-UQSP3=screen is where you can give your saved querya unique identification. Your query name should be short and descriptive. The Saved query name appears in the Query bar. You can add a description to further identify your query. The query description appears in the saved query list screen and can help users make a better determination of which query to use.
+UQSP3=screen is where you can give your saved query a unique identifier. Your query name should be short and descriptive. The Saved query name appears in the Query bar. You can add a description to further identify your query. The query description appears in the saved query list screen and can help users make a better determination of which query to use.
 UQSP4=For example, you have defined several queries that search for issues that relate to the AIX operating system. One of your queries specifically look for all new high priority issues entered. A second query may search for all closed high priority issues. The first query is named AIXopen, the second AIXclosed. You can use the description field to remind yourself that these issues are specifically for high priority issues.
 UQSP5=Before you can save your query you need to determine the availability. Your query can be available only to yourself by selecting "personal" from the drop down list. If you think your query is of value to all members of the project, you can select "global." If you do not have permission to create a global saved query, the query will be submitted to the administrator for approval (see Approval for further information on the approval process).
 ClickThe=Click the 
@@ -1755,7 +1755,7 @@ TemplateList=Template list
 UITP4S2=link under your issue type. On the 
 UITP4S3=screen you will find a list of any templates currently available. You can either manage the templates there or create a new template.
 UITP6=Enter values into the Template details section. The name of your template should be short and descriptive. For instance, to create a template to enter defects affecting performance, you could name it "Performance" and use the description field to detail the types of performance issues this template covers.
-UITP7=Select the level of availability for the the template. Selecting personal will render the template available to the creator only. To make the template available globally you must have the permission to do so and/or go through an approval process (see Approvals).
+UITP7=Select the level of availability for the template.  Selecting personal will render the template available to the creator only.  To make the template available globally you must have the permission to do so and/or go through an approval process (see Approvals).
 UITP8=Enter appropriate values in the Template Attributes section. Attributes appearing in this section are the same as appear in the
 screen=screen
 UITP9=button to save your template.
