--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -778,7 +778,7 @@ UserAttributes=User attributes
 SentToSelected=sent to selected submittees
 NoIssueTypes=There are no more issue types to add to this module.
 IssueTypes=Issue types
-GroupNotFound=Group not found. To procede, please click
+GroupNotFound=Group not found.  To proceed, please click
 AttributeGroupInfo=Attribute group information
 ClickAddButton=Click the "Add" button to add attributes to this group.
 AttributesInGroup=Attributes in this group
@@ -1258,7 +1258,7 @@ IssueCreated=Issue created
 ## Intake
 ## ***********************************************************************
 
-intake_NoAttributeWasSelected=NoAttribute was selected.
+intake_NoAttributeWasSelected=No attribute was selected.
 intake_BadIdMessage=Invalid ID.
 intake_BadIdsMessage=At least one ID is invalid.
 intake_AttributeNameNotAllowedEmpty=Attribute name is not allowed to be empty
@@ -1358,9 +1358,9 @@ ScarabIs=Scarab is
 IntroP1=a highly configurable issue tracking tool that can be used for all types of projects: technical and non-technical alike. Because all parameters in the system are configurable, this tool meets the needs of the project as well as the individual user. Each implementation can be configured directly to the workflow processes of the project through the definition of issue types and attributes. The user interface is designed to be accessible and constant: once you become familiar with the look and feel you will find new processes quick to master.
 ScarabProvides=Scarab provides
 IntroP2=a robust set of tools for issue management:
-IntroP3Head=Issue entry: 
-IntroP3=The issue entry process  is designed to help users create meaningful issues and avoid duplication.   Attributes are used to describe issues and to check the issue database for   similar entries. If any duplicates are found, the user has the opportunity   to review potential duplicates, add comments to like issues or modify their   issue before committing it to the database. 
-IntroP4Head=Templates for issue entry :
+IntroP3Head=Issue entry:
+IntroP3=The issue entry process is designed to help users create meaningful issues and avoid duplication.  Attributes are used to describe issues and to check the issue database for similar entries. If any duplicates are found, the user has the opportunity to review potential duplicates, add comments to like issues or modify their issue before committing it to the database. 
+IntroP4Head=Templates for issue entry:
 IntroP4=Frequently entered issue criteria can be saved in templates for speedy entry. Files can be attached to an issue, and are tracked directly with their issue. Users can add and edit comments to issues as needed. Users can access and review the complete issue history while viewing an issue. 
 IntroP5Head=Issue query:
 IntroP5=Accessing issues in the database is simple using the query feature. Users can easily find, access and modify issues individually or in groups. The advanced query feature allows the user to create detailed issue searches, specifying values for multiple attributes and limiting their search to specific date or issue number ranges. The Custom Query feature allows the user to search by text string-the user can specify a set of information to compare against issues in the database. Frequently used queries can be saved and easily run. <!--Once a saved query has been created, the user can request frequent email updates on issues matching the search criteria.-->
@@ -1415,7 +1415,7 @@ NavP17=Many screens are customizable. You can add to or remove the attributes th
 ScarabGuidelines=Scarab guidelines
 ProjectKnowledge=Project knowledge sharing
 TrackingProject=Tracking project health
-BestP1=The success of any project depends on managing and solving problems. How you use the tools will be dependent upon how your project is organized and your planned workflow processes. You can use the tools as a knowledge sharing device and a means of tracking and managing the health of your project.
+BestP1=The success of any project depends on managing and solving problems.  How you use the tools will be dependent upon how your project is organized and your planned workflow processes.  You can use the tools as a knowledge sharing device and a means of tracking and managing the health of your project.
 BestP2=Information captured within Scarab can be highly effective for many areas within a project. Because Scarab is so highly configurable, knowledge resources can be customized to the needs of each discipline within an organization. Tracking a feature across discipline lines can be done by copying issues and creating dependencies between them. For instance, Project Go has issue types organized by milestone within the feature lifecycle. Project Go has the following issue types: Planning, Development, Testing, Release management and Support. New features are entered in the Planning issue type where they are processed till ready for development. At that point, the issue is copied to Development, Release management and Testing issue types and all copies are set to blocked by the Development issue. All actors have a full description of the feature, including all conversations involved in creating the specifications. Since all issues have interdependencies, monitoring efforts across the discipline lines is an easy process. Blocking all the issues by the Development issue means that none of them can be closed till the development cycle has completed, but each group can continue to work based on what is happening with the development project. For example, documentation may be a part of the release management cycle. Writers can track the features in development and track their documentation efforts in their own issue with links to the development issue. After the feature has been released to the users, support can track incoming issues and easily access information about the feature through any of the issue types and be able to link to other areas quickly through the issue history. 
 BestP3=Scarab can assist in tracking and assessing the health of a project. If your project is experiencing a particular type of concern you need to track, Scarab can help you do this through a series of processes. For example, Project Go has just added a new database and developers are concerned that the new database will cause significant performance problems. While running routine reports and queries, the project lead has determined that there is, indeed, a performance issue possibly associated with the new database. It is determined that fixing this problem is top priority and critical to the success of the project. To facilitate work on this problem, the project owner has created an issue entry template and series of queries and reports. Users are asked to use the template and enter specific information about what they have found in a description attribute. The template is used to regularize information about issues. Using a saved query, project members can quickly access issues involving this concern and concentrate efforts in critical areas. Tracking the progress of resolving the performance problems can be done using reports. How to configure it for your needs can be confusing. This document is a suggested set of practices.
 
