Issue number 16097 - simplify the user relationship to cross module/issue type lists.  This commit does not accomplish much simplification, but does stop referring a "current" module or issue type.
Modified Files:
* src/i18n/ScarabBundle_en_US.properties - added
  AllModulesAndIssueTypes, AllIssueTypesCurrentModule,
  CurrentIssueTypeAllModules resources.  These used to to be localized only
  once in the db; now they will be localized to the current user's locale
* src/java/org/tigris/scarab/actions/DefineXModuleList.java
    doGotoquerywithinternallist: see next entry
* src/java/org/tigris/scarab/actions/ModuleQuery.java
    doPerform: use method from MITListManager when selecting one of the
    predefined multiple issue type queries.  This saves the current module
    or issue type as part of the list, instead of leaving it open until
    the list is later used.
* src/java/org/tigris/scarab/om/AbstractScarabUser.java
* src/java/org/tigris/scarab/om/ScarabUser.java
* src/java/org/tigris/scarab/om/ScarabUserImpl.java
     getLocale: don't throw an Exception from this method.
     AbstractScarabUser's implementation logs any exceptions that might arise
* src/java/org/tigris/scarab/om/MITList.java -
     getExpandedMITListItems:
     switch from (Iterator, while) to (for, Iterator)
     addIssueTypes: added javadoc
* src/java/org/tigris/scarab/om/MITListItem.java
     MULTIPLE_KEY:
     give package access to constant, so manager can use it.
* src/java/org/tigris/scarab/om/MITListManager.java
     getCurrentModuleAllIssueTypesList renamed to getSingleModuleAllIssueTypesList and added argument to pass the module
     getAllModulesCurrentIssueTypeList renamed to getAllModulesSingleIssueTypeList and added argument to pass the issue type
     getAllModulesAllIssueTypesList:
     each of the three above methods were modified to return a list
     constructed from scratch instead of using the database.  It should be
     possible to remove the db entries for the four predef

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1092,6 +1092,10 @@ InvalidIssueTypeId=An issue type ID was specified that was not valid
 NoMatchingIssues=No matching issues.
 MustSelectQueryType=You must select a query type.
 
+AllModulesAndIssueTypes=All modules and issue types
+AllIssueTypesCurrentModule=All issue types in the {0} module
+CurrentIssueTypeAllModules={0} in all modules
+
 ## ModifyModule
 Domain=Domain
 Port=Port
