Corrections from Sean Jackson <Sean.Jackson@maynegroup.com>:
IncompatibleMITListReport has "attributes/optionsas" I think this is a
typo?

GroundRules2 needs a "d" in bandwith.

SearchIndexDoNoteLeavePage needs a "d" in upated.

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -645,7 +645,7 @@ ReportUpdatedPleaseAddRowAndColumnCriteria=Report was updated.  Now you should a
 ReportUpdatedNotSavedPleaseAddRowAndColumnCriteria=Report was updated.  Changes do not persist until the "Save this report" button is clicked.  Now you should add row and column criteria to generate the report.
 ThisShouldNotHappenPleaseContactAdmin=If you can reproduce this message, please contact an administrator with the details to reproduce.
 MITListReportHeading=Issue types selected for this report
-IncompatibleMITListReport=Some previously selected attributes or options are not available for the selected issue types.  Please remove the attributes/optionsas heading labels or the incompatible issue types.
+IncompatibleMITListReport=Some previously selected attributes or options are not available for the selected issue types.  Please remove the attributes/options as heading labels or the incompatible issue types.
 AddSingleDateTime=Add single date/time
 DefaultReportDate=Date used for single date reports
 SelectDatesHeader=Select {0,choice,0#row|1#column} (dates) content
@@ -948,7 +948,7 @@ YouCanViewIssue=You can view the issue detail at the following URL
 PasswordReset=your password has been reset to:
 GroundRules=In order for Scarab to truly be effective (and to keep people like {0} from being constantly in your hair), here are the ground rules...
 GroundRules1=1) When you see an issue come through email channels, this is an indication that you have either been assigned or cc'd on a particular issue.  Don't ignore it!
-GroundRules2=2) If you are the assignee and have the bandwith, it is your responsibility to investigate the issue and if it has been given a milestone "fix" the issue in the proper order.
+GroundRules2=2) If you are the assignee and have the bandwidth, it is your responsibility to investigate the issue and if it has been given a milestone "fix" the issue in the proper order.
 GroundRules3=3) If you are the assignee and don't have the bandwidth, it is your responsibility to communicate (through the description field) your inability to complete the assignment.
 GroundRules4=4) Don't just go and fix issues that have not been given a milestone.  It is extremely important that we've carefully considered the impact your changes have on the codebase.
 GroundRules5=5) Proceed through your issues in order sorted by milestone then priority. If it makes sense to modify the sequence that's fine, just don't blow the milestone!
@@ -1010,7 +1010,7 @@ CreateNewGlobalUserAttribute=Create new global user attribute
 ## ***********************************************************************
 
 SearchIndexUpdated=Search index has been updated.
-SearchIndexDoNoteLeavePage=Search index is currently being upated. Please do not leave this page, it will refresh in {0} seconds.
+SearchIndexDoNoteLeavePage=Search index is currently being updated. Please do not leave this page, it will refresh in {0} seconds.
 
 ## used in several actions
 SelectAttribute=Please select an attribute.
