[intern]charsetnames now correspond to IANA

--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -72,57 +72,59 @@ menu_view_charset_auto = Automatic
 menu_view_charset_global = Global
 menu_view_charset_UTF-8 = UTF-8
 menu_view_charset_UTF-16 = UTF-16
-menu_view_charset_ASCII = US-ASCII
+menu_view_charset_US-ASCII = US-ASCII
 
 menu_view_charset_westeurope = West European
-menu_view_charset_Cp1252 = Western (Windows-1252)
+menu_view_charset_windows-1252 = Western (Windows-1252)
 menu_view_charset_ISO-8859-1 = Western (ISO-8859-1)
 menu_view_charset_ISO-8859-15 = Western (ISO-8859-15)
-menu_view_charset_Cp850 = Western (IBM-850)
+menu_view_charset_IBM850 = Western (IBM-850)
 menu_view_charset_MacRoman = Western (MacRoman)
 menu_view_charset_ISO-8859-7 = Greek (ISO-8859-7)
 menu_view_charset_MacGreek = Greek (MacGreek)
-menu_view_charset_Cp1253 = Greek (Windows-1253)
+menu_view_charset_windows-1253 = Greek (Windows-1253)
 menu_view_charset_MacIceland = Iceland (MacIceland)
 menu_view_charset_ISO-8859-3 = South European (ISO-8859-3)
 
 menu_view_charset_easteurope = East European
 menu_view_charset_ISO-8859-4 = Baltic (ISO-8859-4)
 menu_view_charset_ISO-8859-13 = Baltic (ISO-8859-13)
-menu_view_charset_Cp1257 = Baltic (Windows-1257)
-menu_view_charset_Cp852 = Central European (IBM-852)
+menu_view_charset_windows-1257 = Baltic (Windows-1257)
+menu_view_charset_IBM852 = Central European (IBM-852)
 menu_view_charset_ISO-8859-2 = Central European (ISO-8859-2)
 menu_view_charset_MacCentralEurope = Central European (MacCentralEuropean)
 menu_view_charset_MacCroatian = Croatian (MacCroatian)
-menu_view_charset_Cp855 = Cyrillic (IBM-855)
+menu_view_charset_IBM855 = Cyrillic (IBM-855)
 menu_view_charset_ISO-8859-5 = Cyrillic (ISO-8859-5)
-menu_view_charset_KOI8_R = Cyrillic (KOI8_R)
+menu_view_charset_KOI8-R = Cyrillic (KOI8-R)
 menu_view_charset_MacCyrillic = Cyrillic (MacCyrillic)
-menu_view_charset_Cp1251 = Cyrillic (Windows-1251)
-menu_view_charset_Cp866 = Cyrillic/Russian (IBM-866)
+menu_view_charset_windows-1251 = Cyrillic (Windows-1251)
+menu_view_charset_IBM866 = Cyrillic/Russian (IBM-866)
 menu_view_charset_MacUkraine = Cyrillic/Ukrainian (MacUkraine)
 menu_view_charset_MacRomania = Romanian (MacRomania)
 
 menu_view_charset_eastasian = East Asian
-menu_view_charset_EUC_CN = Chinese Simplified (EUC_CN)
+menu_view_charset_GB2312 = Chinese Simplified (GB2312)
 menu_view_charset_GBK = Chinese Simplified (GBK)
 menu_view_charset_GB18030 = Chinese Simplified (GB18030)
 menu_view_charset_Big5 = Chinese Traditional (Big5)
-menu_view_charset_Big5_HKSCS = Chinese Traditional (Big5-HKSCS)
-menu_view_charset_EUC_TW = Chinese Traditional (EUC_TW)
-menu_view_charset_EUC_JP = Japanese (EUC_JP)
-menu_view_charset_SJIS = Japanese (Shift_JIS)
-menu_view_charset_EUC_KR = Korean (EUC_KR)
+menu_view_charset_Big5-HKSCS = Chinese Traditional (Big5-HKSCS)
+menu_view_charset_EUC-TW = Chinese Traditional (EUC-TW)
+menu_view_charset_EUC-JP = Japanese (EUC-JP)
+menu_view_charset_Shift_JIS = Japanese (Shift_JIS)
+menu_view_charset_ISO-2022-JP = Japanese (ISO-2022-JP)
+menu_view_charset_MS932 = Japanese (MS932)
+menu_view_charset_EUC-KR = Korean (EUC-KR)
 menu_view_charset_JOHAB = Korean (JOHAB)
-menu_view_charset_ISO2022KR = Korean (ISO-2022KR)
+menu_view_charset_ISO-2022-KR = Korean (ISO-2022-KR)
 
 menu_view_charset_seswasian = SE & SW Asian
-menu_view_charset_TIS620 = Thai (TIS)
-menu_view_charset_Cp857 = Turkish (IBM-857)
+menu_view_charset_TIS620 = Thai (TIS620)
+menu_view_charset_IBM857 = Turkish (IBM-857)
 menu_view_charset_ISO-8859-9 = Turkish (ISO-8859-9)
 menu_view_charset_MacTurkish = Turkish (MacTurkish)
-menu_view_charset_Cp1254 = Turkish (Windows-1254)
-menu_view_charset_Cp1258 = Vietnamese (Windows-1258)
+menu_view_charset_windows-1254 = Turkish (Windows-1254)
+menu_view_charset_windows-1258 = Vietnamese (Windows-1258)
 
 
 
@@ -219,8 +221,8 @@ filtertoolbar_flagged = Show flagged messages
 filtertoolbar_expunged = Show expunged messages
 filtertoolbar_attachment = Show messages with attachment
 filtertoolbar_header = Specify header
-filtertoolbar_clear_tooltip=Reset all filters
-filtertoolbar_advanced_tooltip=Open search dialog
+filtertoolbar_clear = Reset all filters
+filtertoolbar_advanced = Open search dialog
 
 
 ######################## attachment viewer
@@ -236,9 +238,3 @@ attachmentview_mimeheader_tooltip=View the Mime-Header of this Attachment
 menu_edit_extern_edit = Use External Editor
 
 menu_security=Security
-
-filtertoolbar_label=Subject or Sender contains:
-
-filtertoolbar_clear=Clear
-
-filtertoolbar_advanced=Advanced...
