* TemplateList.java: check that there is at least one value set for a template bef ore saving. Do not save empty string values. ScarabBundle_en_US.properties: error message resource for templates without attrib ute values. Issue number:  17441

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -240,6 +240,7 @@ TemplateAttributes=Template Attributes
 CouldNotLocateTemplateToDelete=Could not locate template to delete
 TemplateWarning=Note: if you set this template's scope to global, you will no longer be able to edit it. Please finish making all modifications to the template before you click "Save".
 DuplicateTemplateName=A template by this name already exists.
+AtLeastOneAttributeForTemplate=You must set a value for at least one attribute to create a new template.
 
 ##Index/Login
 ToAccessFunctions1=To access most functions in Scarab, you must first
