[bug] #739282 removed entry from menu

--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -222,7 +222,7 @@ filtertoolbar_expunged = Show expunged messages
 filtertoolbar_attachment = Show messages with attachment
 filtertoolbar_header = Specify header
 filtertoolbar_clear = Reset all filters
-filtertoolbar_advanced = Open search dialog
+filtertoolbar_advanced = Search dialog...
 
 
 ######################## attachment viewer
