EmailFooterC: Added missing trailing slash.

--- a/src/i18n/ScarabBundle_es.properties
+++ b/src/i18n/ScarabBundle_es.properties
@@ -1001,7 +1001,7 @@ UserSubmittedQuery = El usuario {0} ha enviado una consulta de ámbito de proyect
 ToApprove = Para aprobarla o recharzarla vete a:
 EmailFooterA = Este mensaje es generado automáticamente por Scarab.
 EmailFooterB = Para obtener más información, visita
-EmailFooterC = http://scarab.tigris.org
+EmailFooterC = http://scarab.tigris.org/
 EmailFooterD = 
 
 
