--- a/src/i18n/ScarabBundle_fr_FR.properties
+++ b/src/i18n/ScarabBundle_fr_FR.properties
@@ -960,7 +960,7 @@ UserSubmittedQuery = L''utilisateur {0} a soumis une requête globale sur votre p
 ToApprove = Pour l'approuver ou la rejeter, veuillez aller à:
 EmailFooterA = Ce message a été généré automatiquement par le système de suivi de faits techniques
 EmailFooterB = Scarab. Pour plus d'informations:
-EmailFooterC = http://scarab.tigris.org
+EmailFooterC = http://scarab.tigris.org/
 EmailFooterD = 
 
 
