--- a/src/i18n/ScarabBundle_nl_NL.properties
+++ b/src/i18n/ScarabBundle_nl_NL.properties
@@ -962,7 +962,7 @@ UserSubmittedQuery = De gebruiker {0} heeft zojuist een project-brede zoekopdrac
 ToApprove = Om goed of af te keuren, ga naar:
 EmailFooterA = Deze boodschap is automatisch gegenereerd door de Scarab
 EmailFooterB = kaart tracking systeem. Voor meer informatie:
-EmailFooterC = http://scarab.tigris.org
+EmailFooterC = http://scarab.tigris.org/
 EmailFooterD = 
 
 
