[intern]disabled not working features for release 0.10.0

--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -220,7 +220,7 @@ filtertoolbar_answered= Show answered messages
 filtertoolbar_flagged = Show flagged messages
 filtertoolbar_expunged = Show expunged messages
 filtertoolbar_attachment = Show messages with attachment
-filtertoolbar_header = Specify header
+filtertoolbar_header = Subject or Sender contains
 filtertoolbar_clear = Reset all filters
 filtertoolbar_advanced = Search dialog...
 
