--- a/CHANGES
+++ b/CHANGES
@@ -1,35 +1,28 @@
-Version 0.11.0
+Version 0.10.0 ::lola rennt::
 
  - Mail-Component:
-    - IMAP BODYSTRUCTURE parser fixes
-    - IMAP LSUB command fixes (much testing with uw-imapd 
-      and cyrus imapd)
-    - theirs a new view-component which just displays the message
-          without the tree/table 
-    - IMAP folders which can't contain messages are displayed in italic
-              and lightgray foreground colour 
-    - drag'n'dropping of folders is much more failsafe and intuitiv 
+    - better i18n support (tested with japanese and russian charsets)
+    - mark message as unread, not flagged, not expunged added
     - major speed improvements in table renderer-code
     - folders remember if the threaded-view is enabled
-    - table gui polishing
     - email-headers and attachments are displayed in the message-view          
     - Lucene (http://jakarta.apache.org/lucene) support for local folders 
       added (high-performance, full-featured text search engine)
-    - vFolders view updates correctly 
-    - added several plugin-handlers: folder, filter, filter-action
+    - added several plugin-handlers: folder, filter, filter-action,
+      pop3-preprocessor
     
  - Core-Component:
  	- sax based configuration backend (results in much better speed and
  	  memory consumption)
  	- threading infrastructure was re-designed and is much faster and more
  	  responsive now
+ 	- menus and toolbars are customizable (xml-based)
  	- every component is now model/view/controller based, so you can open
  	  multiple windows and Columba saves the session for you
  	- much dialog polishing (mnemonics, i18n, ui guidelines)
- 	- new design for actions
- 	- plugin-support added 
  	- added several plugin-handlers: interpreter, action, menu
- 	
+ 	- switching between translation packages supported
+ 	- new french translation package 
 
 Version 0.9.11
 
