Still work in progress, but progress there is.
- Added support for TimeBased rolling.
- Rollover policies now support compression on the fly.

--- a/docs/TODO
+++ b/docs/TODO
@@ -1,10 +1,14 @@
+
+
+
 TODO
+
+- Improve the concurrency model of the Logger class
+- Log4j self configuration
 
 
 - Add support for string options in SocketAppender
-
 - Add a properties file option to log4j:configure in XML.
-
 
 
 - Graceful congiguration merging
